tests/NormalTests/paczka2/big_fuzzy/43344657.err
Error in line 4: Yioo S372 51,1
Error in line 22: ObY2sdj0Mi S899 208,10
Error in line 25: 2Ho3Xynlwoc S465 95,4
Error in line 27: 2Ho3Xynlwoc S899 -1,0
Error in line 30: 2lUhswRwO6B S899 38,1
Error in line 46: S465 S372 2221
Error in line 17: ObY2sdj0Mi S899 59,1
Error in line 39: S465 S372 90,3
Error in line 58: S465 S465 0,1
Error in line 61: 2lUhswRwO6B S14 46,2
Error in line 64: eW6bNC S899 35,3
Error in line 66: 2lUhswRwO6B S465 86,2
Error in line 63: S465 S14 86,5
Error in line 75: Yioo S14 82,7
Error in line 76: ObY2sdj0Mi S899 41,3
Error in line 84: 2GG S14 99,9
Error in line 91: S465 S372 47,0
Error in line 101: 2Ho3Xynlwoc S899 244,0
Error in line 102: 2Ho3Xynlwoc S14 82,3
Error in line 90: 2GG S899 52,8
Error in line 105: S465 S899 9,1
Error in line 113: eW6bNC S465 82,2
Error in line 97: ObY2sdj0Mi S14 32,7
Error in line 104: 2Ho3Xynlwoc S372 16,2
Error in line 120: eW6bNC S899 30,4
Error in line 125: S465 S372 56,8
Error in line 121: 2Ho3Xynlwoc S465 91,3
Error in line 139: ObY2sdj0Mi S465 15,6
Error in line 143: 2Ho3Xynlwoc S465 -2,7
Error in line 142: 2Ho3Xynlwoc S465 66,0
Error in line 150: 2lUhswRwO6B S14 82,1
Error in line 146: S465 S465 292,1
Error in line 162: eW6bNC S465 47,1
Error in line 167: ObY2sdj0Mi S899 93,1
Error in line 173: S465 S899 75,0
Error in line 180: 2lUhswRwO6B S465 69,6
Error in line 197: Yioo S372 22,6
Error in line 201: S465 S899 40,9
Error in line 202: S465 S14 89,1
Error in line 203: eW6bNC S899 18,0
Error in line 204: S465 S465 80,9
Error in line 211: 2lUhswRwO6B S465 2,8
Error in line 223: 2lUswRwO6B S899 66,1
Error in line 220: 2lUhswRwO6B S899 19,5
Error in line 222: eW6bNC S372 13,1
